# gomoku

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  README.md  print_last_log.sh
docs/: board.tui  main_menu.tui  settings.tui
includes/: game.hpp  gomoku.hpp
src/: main.cpp
src/back/: game.cpp
src/config/: logger.cpp
src/logging/: logger.cpp
src/tui/: Tui.cpp  Tui.hpp
